alguma mensagem, que remeta a aula de hoje

--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aulas</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+
+ <section class="Aula01">
+    <h1 class="titulo-alinhamento">Como alinhar texto de diferentes maneiras</h1>
+    <div class="esquerda">
+        <h2>Aqui alinho a esquerda</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, aperiam soluta. Eos voluptate magnam voluptas accusantium cumque architecto hic voluptates, delectus, ipsa impedit, nulla corporis exercitationem sed eius quaerat. Culpa. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae adipisci sit rerum aliquid ad atque voluptatum aspernatur. Neque, voluptas quaerat. Provident quaerat architecto cupiditate animi quae enim minus, rem iure. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque adipisci, quaerat laborum, iste dicta eius, doloremque obcaecati reiciendis odio esse beatae! Rerum quo veritatis modi nesciunt beatae animi ex omnis!
+        </p>
+    </div>
+    <div class="centro">
+        <h2>Aqui alinho a esquerda</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, aperiam soluta. Eos voluptate magnam voluptas accusantium cumque architecto hic voluptates, delectus, ipsa impedit, nulla corporis exercitationem sed eius quaerat. Culpa. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae adipisci sit rerum aliquid ad atque voluptatum aspernatur. Neque, voluptas quaerat. Provident quaerat architecto cupiditate animi quae enim minus, rem iure. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque adipisci, quaerat laborum, iste dicta eius, doloremque obcaecati reiciendis odio esse beatae! Rerum quo veritatis modi nesciunt beatae animi ex omnis!
+        </p>
+    </div>
+    <div class="direita">
+        <h2>Aqui alinho a esquerda</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, aperiam soluta. Eos voluptate magnam voluptas accusantium cumque architecto hic voluptates, delectus, ipsa impedit, nulla corporis exercitationem sed eius quaerat. Culpa. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae adipisci sit rerum aliquid ad atque voluptatum aspernatur. Neque, voluptas quaerat. Provident quaerat architecto cupiditate animi quae enim minus, rem iure. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque adipisci, quaerat laborum, iste dicta eius, doloremque obcaecati reiciendis odio esse beatae! Rerum quo veritatis modi nesciunt beatae animi ex omnis!
+        </p>
+    </div>
+ </section>
+
 </body>
 </html>
